<resources>
    <string name="app_name">The SmartRemote</string>
    <string name="btn_connect">Connect to a device</string>
    <string name="txt_welcome">Choose what you would like to do from the options below</string>
    <string name="btn_view_gestures">View performable gestures</string>
    <string name="btn_list_available_sensors">List available sensors</string>
    <string name="btn_acceleration_and_orientation">View acceleration and orientation</string>
    <string name="connection_status">Connection Status:</string>
    <string name="connected_devices">Connected Devices:</string>
    <string name="todo">TODO</string>
    <string name="calibrate_gestures">Calibrate gestures</string>
    <string name="yaw_val">Yaw Val:</string>
    <string name="add_device">Add device</string>
    <string name="txt_compass_value">\Compass: </string>
    <string name="edit_details">Edit details</string>
    <string name="assign_gestures">Assign Gestures</string>
    <string name="txt_name" />
    <string name="txt_room" />
    <string name="btn_csnt_see_device">Can\'t see device?</string>
    <string name="txt_compass" />
    <string name="btn_select_device">Select</string>
    <string name="txt_rotate_output" />
    <string name="btn_accel">Accel-Flick</string>
    <string name="btn_orient">Orientation-Left Right</string>
    <string name="btn_swipe">Swipe...</string>
    <string name="btn_manage_devices">Manage devices</string>
    <string name="txt_wifi_status">Wifi:</string>
    <string name="btn_cal_start">Tap to begin calibration</string>
    <string name="btn_cal_end">Tap to finish calibration</string>
    <string name="txt_is_complete" />
    <string name="tap_to_begin_then_press_and_hold_while_you_make_your_gesture_flick_up_left_and_right_rotate_clockwise_and_anticlockwise">Tap to begin, then press and hold while you make your gesture. Flick: up, left and right. Rotate: clockwise and anticlockwise.</string>
    <string name="txt_connected_status">Connected</string>
    <string name="connected_status">Connected status</string>
    <string name="testerror">TestError</string>
    <string name="add_device_image">Add device image</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_close">Close</string>
    <string name="textView">Name</string>
    <string name="txt_connection_status">Connection status</string>
    <string name="btn_wifi_on_off">Wifi On Off</string>
    <string name="btn_discover">Discover</string>
    <string name="txt_message">Message</string>
    <string name="hint">Message</string>
    <string name="btn_send">Send</string>
    <string name="edit_text">Enter text here</string>
    <string name="btn_register">Register</string>
    <string name="btn_connect_to_device">Connect</string>
    <string name="btn_connect_devices">Connect</string>
    <string name="txt_compass_test">TextView</string>
    <string name="txt_list_test">TextView</string>
    <string name="txt_pivot_item_test">TextView</string>
    <string name="txt_rotation_z">TextView</string>
    <string name="list_location_image_button">List location image button</string>
    <string name="locations_image_button">Locations image button</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="img_gestures">Gestures</string>
    <string name="txt_ip_address">TextView</string>
</resources>
